--- a/assets/assets/lang/it.json
+++ b/assets/assets/lang/it.json
@@ -13,8 +13,8 @@
   "myRecords": "Le mie osservazioni",
   "settings": "Impostazioni",
   "logout": "Logout",
-  "login": "Login",
-  "register": "Registrati",
+
+
   "language": "Lingua",
   "theme": "Tema",
   "systemTheme": "Tema di Sistema",
@@ -22,8 +22,7 @@
   "darkTheme": "Tema Scuro",
   "submit": "Invia",
   "cancel": "Annulla",
-  "search": "Cerca",
-  "selectColumns": "Seleziona Colonne",
+
   "ok": "OK",
   "noData": "Nessun Dato",
   "dataTable": "Tabella Dati",
@@ -56,11 +55,9 @@
   "acceptToAppearText": "Accetto di apparire nell'app come esperto in modo che gli altri utenti possano trovarmi",
   "submitButton": "Invia e accedi con Google",
   "dataSubmittedMessage": "Dati inviati con successo",
-  "errorDialogTitle": "Errore",
-  "errorDialogCloseButton": "Chiudi",
+
   "noteLoginResearcher": "Nota: La prossima volta potrai accedere come normale utente",
-  "countryLabel": "Paese",
-  "errorProfileLinkLabel": "Per favore, inserisci un URL valido",
+
   "name": "Nome",
   "degree": "Laurea",
   "experience": "Anni di Esperienza",
@@ -74,7 +71,7 @@
   "county": "Provincia",
   "city": "Città",
   "postcode": "CAP",
-  "phone": "Telefono",
+  "phone": "Telefon0",
   "openingHours": "Orari di Apertura",
   "website": "Sito Web",
   "selectTimeRange": "Seleziona intervallo di tempo",
@@ -94,7 +91,6 @@
   "minMa": "Min Ma",
   "maxMa": "Max Ma",
   "earlyInterval": "Intervallo Iniziale",
-  "lateInterval": "Intervallo Finale",
   "occurrenceDetails": "Dettagli sull'Occorrenza",
   "viewMediaButton": "Visualizza Contenuti Multimediali",
   "loadingMessage": "Caricamento...",
@@ -108,7 +104,7 @@
   "source": "Fonte",
   "progress": "Progresso",
   "title": "Titolo",
-  "thumbnail": "Miniatura",
+
   "description": "Descrizione",
   "creator": "Creatore",
   "inCollection": "Nella Collezione",
@@ -207,20 +203,13 @@
   "enterName": "Inserisci nome",
   "eventDateTime": "Data e Ora dell'Evento",
   "selectDateTime": "Seleziona data e ora",
-  "isMultyDayEvent": "Evento di più giorni",
-  "eventEndDateTime": "Data e ora di fine",
-  "selectEventDateTime": "Seleziona data e ora dell'evento",
-  "selectEndDateTime": "Seleziona data e ora di fine",
-  "endDateRequired": "La data di fine è richiesta per eventi di più giorni",
-  "eventEndDateMustBeAfterStartDate": "La data di fine deve essere successiva alla data di inizio",
   "timeZone": "Fuso Orario",
   "selectTimeZone": "Seleziona fuso orario",
   "enterPlace": "Inserisci luogo",
   "enterCity": "Inserisci città",
   "enterState": "Inserisci stato",
   "enterCountry": "Inserisci paese",
-  "pickLocation": "Scegli Posizione",
-  "selectedLocation": "Posizione Selezionata",
+
   "enterPrice": "Inserisci prezzo o seleziona Gratis",
   "enterOrganizer": "Inserisci organizzatore",
   "targetAudience": "Pubblico Target",
@@ -261,42 +250,55 @@
   "acceptTermsText": "Cliccando sul pulsante 'Invia e accedi con Google', accetti i termini e le condizioni dell'applicazione",
   "termsAndConditionsTitle": "Termini e Condizioni",
   "termsAndConditionsContent": "Utilizzando questa applicazione, accetti i seguenti termini e condizioni:\n\n1. I dati forniti dall'applicazione sono solo a scopo informativo. Gli sviluppatori dell'applicazione non sono responsabili per l'accuratezza dei dati.\n\n2. Gli sviluppatori dell'applicazione non sono responsabili per il contenuto delle immagini e dei modelli 3D forniti dall'applicazione.\n\n3. Gli sviluppatori dell'applicazione non sono responsabili per il contenuto dei link esterni forniti dall'applicazione.\n\n4. Gli sviluppatori dell'applicazione si riservano il diritto di includere annunci nell'applicazione per coprire i costi di manutenzione e sviluppo del progetto.\n\n5. Gli sviluppatori dell'applicazione si riservano il diritto di modificare i termini e le condizioni dell'applicazione in qualsiasi momento senza preavviso.\n\n6. Gli sviluppatori dell'applicazione si riservano il diritto di bloccare gli utenti che non rispettano i termini e le condizioni dell'applicazione.\n\n7. Le informazioni fornite dagli utenti dell'applicazione saranno utilizzate esclusivamente per il funzionamento e possono essere utilizzate per scopi statistici e di ricerca e possono essere disponibili per altri utenti dell'applicazione, per questo motivo gli utenti devono essere cauti con le informazioni che forniscono.\n\n8. I tuoi dati saranno archiviati in un servizio di terze parti (Google Firebase) e saranno utilizzati per autenticarti nell'applicazione. Gli sviluppatori dell'applicazione non sono responsabili per la sicurezza dei dati archiviati nel servizio di terze parti.",
+
+
+  "isMultyDayEvent": "Evento di più giorni",
+  "eventEndDateTime": "Data e ora di fine evento",
+  "selectEventDateTime": "Seleziona data e ora evento",
+  "selectEndDateTime": "Seleziona data e ora di fine",
+  "endDateRequired": "Data di fine richiesta per eventi di più giorni",
+  "eventEndDateMustBeAfterStartDate": "La data di fine deve essere successiva alla data di inizio",
+  "dataSubmittedDescription": "I tuoi dati sono stati inviati con successo",
+  "lateInterval": "Intervallo Finale",
+  "error": "Errore",
+  "noRecordsFound": "Nessuna osservazione trovata",
   "museumDetails": "Dettagli del Museo",
   "database": "Database",
-  "deleteLocalDatabases": "Elimina Database Locali",
-  "localDatabaseCleared": "Database locali eliminati",
+  "deleteLocalDatabases": "Elimina Database Locale",
+  "localDatabasesCleared": "Database locale cancellato",
   "translations": "Traduzioni",
   "translators": "Traduttori",
   "supportUs": "Supportaci",
-  "pinchToZoom": "Pinch per Zoom",
-  "dragToMove": "Trascina per Spostare",
-  "radialView": "Vista radiale",
-  "linearView": "Vista lineare",
-  "openInExternalBrowser": "Apri nel browser esterno",
-  "openLink": "Apri link",
-  "noDataToExport": "Nessun dato da esportare",
-  "allTime": "Tutto il tempo",
-  "timeRange": "Intervallo di tempo",
-  "storagePermissionDenied": "Permesso di archiviazione negato",
-  "dataExportedSuccessfully": "Dati esportati con successo",
-  "exportError": "Errore di esportazione",
-  "searchesByHour": "Ricerche per ora",
-  "searchesByDay": "Ricerche per giorno",
-  "topSearchTerms": "Termini di ricerca più popolari",
-  "mostActiveUsers": "Utenti più attivi",
-  "searchStatistics": "Statistiche di ricerca",
+  "resetTree": "Reimposta Albero",
+  "pinchToZoom": "Pizzica per zoom",
+  "dragToMove": "Trascina per muovere",
+  "radialView": "Vista Radiale",
+  "linearView": "Vista Lineare",
+  "openInExternalBrowser": "Apri nel Browser Esterno",
+  "openLink": "Apri Link",
+  "noDataToExport": "Nessun Dato da Esportare",
+  "allTime": "Tutto il Tempo",
+  "timeRange": "Intervallo di Tempo",
+  "storagePermissionDenied": "Permesso di Archiviazione Negato",
+  "dataExportedSuccessfully": "Dati Esportati con Successo",
+  "exportError": "Errore di Esportazione",
+  "searchesByHour": "Ricerche per Ora",
+  "searchesByDay": "Ricerche per Giorno",
+  "topSearchTerms": "Termini di Ricerca Principali",
+  "mostActiveUsers": "Utenti Più Attivi",
+  "searchStatistics": "Statistiche di Ricerca",
   "exportToCsv": "Esporta in CSV",
-  "refreshData": "Aggiorna dati",
-  "chartType": "Tipo di grafico",
+  "refreshData": "Aggiorna Dati",
+  "chartType": "Tipo di Grafico",
   "today": "Oggi",
-  "thisWeek": "Questa settimana",
-  "thisMonth": "Questo mese",
-  "last30Days": "Ultimi 30 giorni",
-  "lastUpdated": "Ultimo aggiornamento",
-  "totalSearches": "Totale ricerche",
-  "errorLoadingData": "Errore nel caricamento dei dati",
+  "thisWeek": "Questa Settimana",
+  "thisMonth": "Questo Mese",
+  "last30Days": "Ultimi 30 Giorni",
+  "lastUpdated": "Ultimo Aggiornamento",
+  "totalSearches": "Ricerche Totali",
+  "errorLoadingData": "Errore nel Caricamento dei Dati",
   "tryAgain": "Riprova",
-  "filteredResults": "Risultati filtrati",
+  "filteredResults": "Risultati Filtrati",
   "stats": "Statistiche",
   "taxonomicInformation": "Informazioni Tassonomiche",
   "geologicalInformation": "Informazioni Geologiche",
@@ -309,5 +311,86 @@
   "taxon": "Taxon",
   "pbdbOccurrenceId": "ID Occorrenza PBDB",
   "viewFullDetails": "Visualizza Dettagli Completi",
-  "viewOnApp": "Visualizza su Where is my fossil"
+  "member": "Membro",
+  "reference": "Riferimento",
+  "viewMediaAndReferences": "Visualizza Media e Riferimenti",
+  "viewOnApp": "Visualizza in Where is my fossil",
+  "opportunities": "Opportunità Paleontologiche",
+  "opportunityDeadline": "Scadenza",
+  "opportunitySalary": "Stipendio",
+  "opportunityApply": "Candidati",
+  "opportunityContact": "Contatto",
+  "opportunityNoResults": "Nessuna opportunità trovata",
+  "opportunityFilterByType": "Filtra per tipo",
+  "opportunityFilterByCountry": "Filtra per paese",
+  "opportunitySubmitNew": "Invia nuova opportunità",
+  "opportunitySeeDetails": "Vedi dettagli",
+  "opportunityFilterTitle": "Filtri",
+  "opportunityResetFilters": "Reimposta filtri",
+  "opportunityApplyFilters": "Applica filtri",
+  "type": "Tipo",
+  "deadline": "Scadenza",
+  "location": "Posizione",
+  "salary": "Stipendio (opzionale)",
+  "requirements": "Requisiti",
+  "applicationUrl": "URL Candidatura",
+  "contactEmail": "Email di Contatto",
+  "visible": "Visibile",
+  "continue": "Continua",
+  "confirmUpload": "Conferma Caricamento",
+  "uploadingOpportunities": "Caricamento opportunità...",
+  "validationIssues": "Problemi di Validazione",
+  "update": "Aggiorna",
+  "enterTitle": "Inserisci un titolo",
+  "selectType": "Seleziona un tipo",
+  "selectDeadline": "Seleziona una scadenza",
+  "enterInstitution": "Inserisci un'istituzione",
+
+  "enterRequirements": "Inserisci i requisiti",
+  "enterApplicationUrl": "Inserisci un URL per la candidatura",
+  "enterContactEmail": "Inserisci un'email di contatto",
+  "enterValidEmail": "Inserisci un indirizzo email valido",
+  "confirmUploadMessage": "Questo caricherà {count} opportunità. Vuoi continuare?",
+  "locationSelected": "Posizione selezionata: ({lat}, {lng})",
+  "allCountries": "Tutti i Paesi",
+  "opportunityFilterOptions": "Opzioni di Filtro",
+  "selectLocation": "Seleziona Posizione",
+  "opportunityIntroText": "Invia una nuova opportunità in paleontologia",
+  "opportunityLoginRequired": "Devi essere loggato per inviare un'opportunità",
+  "selectLocationOnMap": "Seleziona posizione sulla mappa",
+  "selectColor": "Seleziona Colore",
+  "changeChartColor": "Cambia Colore Grafico",
+  "filterTerms": "Filtra Termini",
+  "searchTerms": "Termini di Ricerca",
+  "showAll": "Mostra Tutto",
+  "hideAll": "Nascondi Tutto",
+  "filterUsers": "Filtra Utenti",
+  "enableUserFilter": "Abilita Filtro Utenti",
+  "searchUsers": "Cerca Utenti",
+  "selectAll": "Seleziona Tutto",
+  "selectNone": "Seleziona Nessuno",
+  "resetAllFilters": "Reimposta Tutti i Filtri",
+  "hideFilters": "Nascondi Filtri",
+  "showFilters": "Mostra Filtri",
+  "activeFilters": "Filtri Attivi",
+  "chronoChart": "Tabella Cronostratigrafica",
+  "ma": "Ma",
+  "stratigraphicUnit": "Unità Stratigrafica",
+  "geochronologicUnit": "Unità Geocronologica",
+
+  "ratifiedGSSPCategories": "Sezione e Punto Stratotipo di Limite Globale",
+  "ratifiedGSSACategories": "Età Stratigrafica Standard Globale",
+  "subUnits": "Sottounità",
+  "searchTimeUnits": "Cerca unità di tempo...",
+  "noResultsFound": "Nessun risultato trovato per",
+
+  "noDataAvailable": "Nessun dato disponibile",
+
+  "eon": "Eone",
+  "era": "Era",
+  "period": "Periodo",
+  "epoch": "Epoca",
+  "age": "Età"
 }
+
+
