--- a/assets/assets/lang/pt.json
+++ b/assets/assets/lang/pt.json
@@ -13,8 +13,7 @@
   "myRecords": "Meus Registros",
   "settings": "Configurações",
   "logout": "Sair",
-  "login": "Entrar",
-  "register": "Registrar",
+
   "language": "Idioma",
   "theme": "Tema",
   "systemTheme": "Tema do Sistema",
@@ -22,8 +21,7 @@
   "darkTheme": "Tema Escuro",
   "submit": "Enviar",
   "cancel": "Cancelar",
-  "search": "Buscar",
-  "selectColumns": "Selecionar Colunas",
+
   "ok": "OK",
   "noData": "Sem Dados",
   "dataTable": "Tabela de Dados",
@@ -56,11 +54,9 @@
   "acceptToAppearText": "Concordo em aparecer no aplicativo como especialista para que outros usuários possam me encontrar",
   "submitButton": "Enviar e entrar com Google",
   "dataSubmittedMessage": "Dados enviados com sucesso",
-  "errorDialogTitle": "Erro",
-  "errorDialogCloseButton": "Fechar",
+
   "noteLoginResearcher": "Nota: Da próxima vez, você pode entrar como usuário normal",
-  "countryLabel": "País",
-  "errorProfileLinkLabel": "Por favor, insira uma URL válida",
+
   "name": "Nome",
   "degree": "Grau",
   "experience": "Anos de Experiência",
@@ -94,7 +90,6 @@
   "minMa": "Min Ma",
   "maxMa": "Max Ma",
   "earlyInterval": "Intervalo Inicial",
-  "lateInterval": "Intervalo Final",
   "occurrenceDetails": "Detalhes da Ocorrência",
   "viewMediaButton": "Ver Mídia",
   "loadingMessage": "Carregando...",
@@ -108,7 +103,7 @@
   "source": "Fonte",
   "progress": "Progresso",
   "title": "Título",
-  "thumbnail": "Miniatura",
+
   "description": "Descrição",
   "creator": "Criador",
   "inCollection": "Na Coleção",
@@ -206,12 +201,6 @@
   "eventName": "Nome do Evento",
   "enterName": "Digite o nome",
   "eventDateTime": "Data e Hora do Evento",
-  "isMultyDayEvent": "Evento de vários dias",
-  "eventEndDateTime": "Data e hora de término",
-  "selectEventDateTime": "Selecionar data e hora do evento",
-  "selectEndDateTime": "Selecionar data e hora de término",
-  "endDateRequired": "A data de término é necessária para eventos de vários dias",
-  "eventEndDateMustBeAfterStartDate": "A data de término deve ser posterior à data de início",
   "selectDateTime": "Selecionar data e hora",
   "timeZone": "Fuso Horário",
   "selectTimeZone": "Selecionar fuso horário",
@@ -219,8 +208,7 @@
   "enterCity": "Digite a cidade",
   "enterState": "Digite o estado",
   "enterCountry": "Digite o país",
-  "pickLocation": "Escolher Localização",
-  "selectedLocation": "Localização Selecionada",
+
   "enterPrice": "Digite o preço ou selecione Grátis",
   "enterOrganizer": "Digite o organizador",
   "targetAudience": "Público-alvo",
@@ -261,42 +249,55 @@
   "acceptTermsText": "Ao clicar no botão 'Enviar e entrar com Google', você concorda com os termos e condições do aplicativo",
   "termsAndConditionsTitle": "Termos e Condições",
   "termsAndConditionsContent": "Ao usar este aplicativo, você concorda com os seguintes termos e condições:\n\n1. Os dados fornecidos pelo aplicativo são apenas para fins informativos. Os desenvolvedores do aplicativo não são responsáveis pela precisão dos dados.\n\n2. Os desenvolvedores do aplicativo não são responsáveis pelo conteúdo das imagens e modelos 3D fornecidos pelo aplicativo.\n\n3. Os desenvolvedores do aplicativo não são responsáveis pelo conteúdo dos links externos fornecidos pelo aplicativo.\n\n4. Os desenvolvedores do aplicativo reservam-se o direito de incluir anúncios no aplicativo para cobrir os custos de manutenção e desenvolvimento do projeto.\n\n5. Os desenvolvedores do aplicativo reservam-se o direito de modificar os termos e condições do aplicativo a qualquer momento, sem aviso prévio.\n\n6. Os desenvolvedores do aplicativo reservam-se o direito de bloquear usuários que não cumpram os termos e condições do aplicativo.\n\n7. As informações fornecidas pelos usuários do aplicativo serão usadas exclusivamente para a operação e podem ser usadas para fins estatísticos e de pesquisa e podem estar disponíveis para outros usuários do aplicativo, por isso os usuários devem ter cuidado com as informações que fornecem.\n\n8. Seus dados serão armazenados em um serviço de terceiros (Google Firebase) e serão usados para autenticar você no aplicativo. Os desenvolvedores do aplicativo não são responsáveis pela segurança dos dados armazenados no serviço de terceiros.",
+
+
+  "isMultyDayEvent": "Evento de vários dias",
+  "eventEndDateTime": "Data e hora de término do evento",
+  "selectEventDateTime": "Selecionar data e hora do evento",
+  "selectEndDateTime": "Selecionar data e hora de término",
+  "endDateRequired": "Data de término é necessária para eventos de vários dias",
+  "eventEndDateMustBeAfterStartDate": "A data de término deve ser posterior à data de início",
+  "dataSubmittedDescription": "Seus dados foram enviados com sucesso",
+  "lateInterval": "Intervalo Final",
+  "error": "Erro",
+  "noRecordsFound": "Nenhum registro encontrado",
   "museumDetails": "Detalhes do Museu",
   "database": "Banco de Dados",
-  "deleteLocalDatabases": "Excluir Bancos de Dados Locais",
-  "localDatabaseCleared": "Banco de Dados Local Limpo",
+  "deleteLocalDatabases": "Excluir Banco de Dados Local",
+  "localDatabasesCleared": "Banco de dados local apagado",
   "translations": "Traduções",
   "translators": "Tradutores",
   "supportUs": "Apoie-nos",
-  "pinchToZoom": "Beliscar para Ampliar",
-  "dragToMove": "Arrastar para Mover",
-  "radialView": "Vista radial",
-  "linearView": "Vista linear",
-  "openInExternalBrowser": "Abrir no navegador externo",
-  "openLink": "Abrir link",
-  "noDataToExport": "Nenhum dado para exportar",
-  "allTime": "Todo o tempo",
-  "timeRange": "Intervalo de tempo",
-  "storagePermissionDenied": "Permissão de armazenamento negada",
-  "dataExportedSuccessfully": "Dados exportados com sucesso",
-  "exportError": "Erro de exportação",
-  "searchesByHour": "Pesquisas por hora",
-  "searchesByDay": "Pesquisas por dia",
-  "topSearchTerms": "Principais termos de pesquisa",
-  "mostActiveUsers": "Usuários mais ativos",
-  "searchStatistics": "Estatísticas de pesquisa",
+  "resetTree": "Redefinir Árvore",
+  "pinchToZoom": "Aperte para zoom",
+  "dragToMove": "Arraste para mover",
+  "radialView": "Visão Radial",
+  "linearView": "Visão Linear",
+  "openInExternalBrowser": "Abrir no Navegador Externo",
+  "openLink": "Abrir Link",
+  "noDataToExport": "Sem Dados para Exportar",
+  "allTime": "Todo o Tempo",
+  "timeRange": "Intervalo de Tempo",
+  "storagePermissionDenied": "Permissão de Armazenamento Negada",
+  "dataExportedSuccessfully": "Dados Exportados com Sucesso",
+  "exportError": "Erro na Exportação",
+  "searchesByHour": "Buscas por Hora",
+  "searchesByDay": "Buscas por Dia",
+  "topSearchTerms": "Termos de Busca Principais",
+  "mostActiveUsers": "Usuários Mais Ativos",
+  "searchStatistics": "Estatísticas de Busca",
   "exportToCsv": "Exportar para CSV",
-  "refreshData": "Atualizar dados",
-  "chartType": "Tipo de gráfico",
+  "refreshData": "Atualizar Dados",
+  "chartType": "Tipo de Gráfico",
   "today": "Hoje",
-  "thisWeek": "Esta semana",
-  "thisMonth": "Este mês",
-  "last30Days": "Últimos 30 dias",
-  "lastUpdated": "Última atualização",
-  "totalSearches": "Total de pesquisas",
-  "errorLoadingData": "Erro ao carregar dados",
-  "tryAgain": "Tente novamente",
-  "filteredResults": "Resultados filtrados",
+  "thisWeek": "Esta Semana",
+  "thisMonth": "Este Mês",
+  "last30Days": "Últimos 30 Dias",
+  "lastUpdated": "Última Atualização",
+  "totalSearches": "Total de Buscas",
+  "errorLoadingData": "Erro ao Carregar Dados",
+  "tryAgain": "Tentar Novamente",
+  "filteredResults": "Resultados Filtrados",
   "stats": "Estatísticas",
   "taxonomicInformation": "Informação Taxonômica",
   "geologicalInformation": "Informação Geológica",
@@ -305,9 +306,90 @@
   "collectionInformation": "Informação da Coleção",
   "databaseInformation": "Informação do Banco de Dados",
   "viewOnPaleobiologyDatabase": "Ver no Banco de Dados de Paleobiologia",
-  "shareOccurrenceMessage": "Confira esta ocorrência fóssil que encontrei no aplicativo WhereIsMyFossil!",
+  "shareOccurrenceMessage": "Veja esta ocorrência fóssil que encontrei no aplicativo WhereIsMyFossil!",
   "taxon": "Táxon",
   "pbdbOccurrenceId": "ID de Ocorrência PBDB",
   "viewFullDetails": "Ver Detalhes Completos",
-  "viewOnApp": "Ver no Where is my fossil"
+  "member": "Membro",
+  "reference": "Referência",
+  "viewMediaAndReferences": "Ver Mídia e Referências",
+  "viewOnApp": "Ver em Onde está meu fóssil",
+  "opportunities": "Oportunidades Paleontológicas",
+  "opportunityDeadline": "Prazo",
+  "opportunitySalary": "Salário",
+  "opportunityApply": "Aplicar",
+  "opportunityContact": "Contato",
+  "opportunityNoResults": "Nenhuma oportunidade encontrada",
+  "opportunityFilterByType": "Filtrar por tipo",
+  "opportunityFilterByCountry": "Filtrar por país",
+  "opportunitySubmitNew": "Enviar nova oportunidade",
+  "opportunitySeeDetails": "Ver detalhes",
+  "opportunityFilterTitle": "Filtros",
+  "opportunityResetFilters": "Redefinir filtros",
+  "opportunityApplyFilters": "Aplicar filtros",
+  "type": "Tipo",
+  "deadline": "Prazo",
+  "location": "Localização",
+  "salary": "Salário (opcional)",
+  "requirements": "Requisitos",
+  "applicationUrl": "URL de Inscrição",
+  "contactEmail": "E-mail de Contato",
+  "visible": "Visível",
+  "continue": "Continuar",
+  "confirmUpload": "Confirmar Upload",
+  "uploadingOpportunities": "Enviando oportunidades...",
+  "validationIssues": "Problemas de Validação",
+  "update": "Atualizar",
+  "enterTitle": "Por favor, digite um título",
+  "selectType": "Por favor, selecione um tipo",
+  "selectDeadline": "Por favor, selecione um prazo",
+  "enterInstitution": "Por favor, digite uma instituição",
+
+  "enterRequirements": "Por favor, digite os requisitos",
+  "enterApplicationUrl": "Por favor, digite uma URL de inscrição",
+  "enterContactEmail": "Por favor, digite um e-mail de contato",
+  "enterValidEmail": "Por favor, digite um endereço de e-mail válido",
+  "confirmUploadMessage": "Isso enviará {count} oportunidades. Deseja continuar?",
+  "locationSelected": "Localização selecionada: ({lat}, {lng})",
+  "allCountries": "Todos os Países",
+  "opportunityFilterOptions": "Opções de Filtro",
+  "selectLocation": "Selecionar Localização",
+  "opportunityIntroText": "Enviar uma nova oportunidade paleontológica",
+  "opportunityLoginRequired": "Você precisa estar logado para enviar uma oportunidade",
+  "selectLocationOnMap": "Selecionar localização no mapa",
+  "selectColor": "Selecionar Cor",
+  "changeChartColor": "Mudar Cor do Gráfico",
+  "filterTerms": "Filtrar Termos",
+  "searchTerms": "Termos de Busca",
+  "showAll": "Mostrar Tudo",
+  "hideAll": "Ocultar Tudo",
+  "filterUsers": "Filtrar Usuários",
+  "enableUserFilter": "Habilitar Filtro de Usuário",
+  "searchUsers": "Buscar Usuários",
+  "selectAll": "Selecionar Todos",
+  "selectNone": "Selecionar Nenhum",
+  "resetAllFilters": "Redefinir Todos os Filtros",
+  "hideFilters": "Ocultar Filtros",
+  "showFilters": "Mostrar Filtros",
+  "activeFilters": "Filtros Ativos",
+  "chronoChart": "Tabela Cronoestratigráfica",
+  "ma": "Ma",
+  "stratigraphicUnit": "Unidade Estratigráfica",
+  "geochronologicUnit": "Unidade Geocronológica",
+
+  "ratifiedGSSPCategories": "Seção e Ponto de Estratótipo de Limite Global",
+  "ratifiedGSSACategories": "Idade Estratigráfica Padrão Global",
+  "subUnits": "Subunidades",
+  "searchTimeUnits": "Pesquisar unidades de tempo...",
+  "noResultsFound": "Nenhum resultado encontrado para",
+
+  "noDataAvailable": "Nenhum dado disponível",
+
+  "eon": "Éon",
+  "era": "Era",
+  "period": "Período",
+  "epoch": "Época",
+  "age": "Idade"
 }
+
+
