--- a/assets/assets/lang/ca.json
+++ b/assets/assets/lang/ca.json
@@ -41,6 +41,12 @@
   "moderation": "Moderació",
   "users": "Usuaris",
   "events": "Esdeveniments",
+  "isMultyDayEvent": "Esdeveniment de diversos dies",
+  "eventEndDateTime": "Data i hora de finalització de l'esdeveniment",
+  "selectEventDateTime": "Selecciona data i hora de l'esdeveniment",
+  "selectEndDateTime": "Selecciona data i hora de finalització",
+  "endDateRequired": "Es requereix data de finalització per a esdeveniments de diversos dies",
+  "eventEndDateMustBeAfterStartDate": "La data de finalització ha de ser posterior a la data d'inici",
   "paleontologists": "Paleontòlegs",
   "museums": "Museus",
   "researcherProfileTitle": "Perfil de l'investigador",
@@ -55,11 +61,9 @@
   "profileLinkLabel": "Enllaç del perfil",
   "acceptToAppearText": "Accepto aparèixer a l'aplicació com a expert perquè altres usuaris em puguin trobar",
   "submitButton": "Enviar i iniciar sessió amb Google",
+  "dataSubmittedDescription":"Les teves dades s'han enviat correctament",
   "dataSubmittedMessage": "Dades enviades amb èxit",
-  "errorDialogTitle": "Error",
-  "errorDialogCloseButton": "Tancar",
   "noteLoginResearcher": "Nota: La propera vegada pots iniciar sessió com a usuari normal",
-  "countryLabel": "País",
   "errorProfileLinkLabel": "Si us plau, introdueix una URL vàlida",
   "name": "Nom",
   "degree": "Grau",
@@ -207,12 +211,6 @@
   "enterName": "Introdueix el nom",
   "eventDateTime": "Data i hora de l'esdeveniment",
   "selectDateTime": "Selecciona data i hora",
-  "isMultyDayEvent": "Esdeveniment de diversos dies",
-  "eventEndDateTime": "Data i hora de finalització de l'esdeveniment",
-  "selectEventDateTime": "Selecciona data i hora de l'esdeveniment",
-  "selectEndDateTime": "Selecciona data i hora de finalització",
-  "endDateRequired": "Es requereix data de finalització per a esdeveniments de diversos dies",
-  "eventEndDateMustBeAfterStartDate": "La data de finalització ha de ser posterior a la data d'inici",
   "timeZone": "Fus horari",
   "selectTimeZone": "Selecciona fus horari",
   "enterPlace": "Introdueix el lloc",
@@ -256,6 +254,8 @@
   "deleteRecord": "Eliminar registre",
   "areYouSureDeleteRecord": "Estàs segur que vols eliminar aquest registre?",
   "delete": "Eliminar",
+  "error": "Error",
+  "noRecordsFound": "No s'han trobat registres",
   "descriptionOfTheApp": "On és el meu fòssil? és una aplicació desenvolupada pel projecte mexicà Museo Virtual Nacional, que et permet explorar dades d'ocurrència de fòssils de tot el món, explorar filogènies, veure imatges i models 3D de fòssils, i molt més. Tot i que les bases de dades sobre ocurrències, imatges, filogènies i models 3D són gratuïtes, les bases de dades dels investigadors i museus són gestionades independentment per nosaltres. L'allotjament i el manteniment d'aquestes bases de dades estan limitats als recursos disponibles, per això vam decidir incloure anuncis a l'aplicació per cobrir els costos de manteniment i desenvolupament del projecte. Les futures versions de l'aplicació poden reduir o eliminar els anuncis si els recursos ho permeten o si s'obté finançament d'altres fonts.",
   "followUs": "Segueix-nos a les xarxes socials o fes una donació per donar suport al projecte",
   "acceptTermsText": "En fer clic al botó 'Enviar i iniciar sessió amb Google', acceptes els termes i condicions de l'aplicació",
@@ -266,8 +266,9 @@
   "deleteLocalDatabases": "Eliminar les Bases de Dades Locals",
   "localDatabaseCleared": "Base de dades local esborrada",
   "translations": "Traduccions",
-   "translators": "Traductors",
+  "translators": "Traductors",
   "supportUs": "Dóna'ns suport",
+  "resetTree": "Restablir arbre",
   "pinchToZoom": "Pellizcar per fer zoom",
   "dragToMove": "Arrossegar per moure",
   "radialView": "Vista radial",
@@ -309,5 +310,92 @@
   "taxon": "Tàxon",
   "pbdbOccurrenceId": "ID d'Ocurrència PBDB",
   "viewFullDetails": "Veure Detalls Complets",
-  "viewOnApp": "Veure a Where is my fossil"
+  "member": "Membre",
+  "reference": "Referència",
+  "viewMediaAndReferences": "Veure mitjans i referències",
+  "viewOnApp": "Veure a Where is my fossil",
+  "opportunities": "Oportunitats Paleontològiques",
+  "opportunityDeadline": "Data límit",
+  "opportunitySalary": "Salari",
+  "opportunityApply": "Sol·licitar",
+  "opportunityContact": "Contacte",
+  "opportunityNoResults": "No s'han trobat oportunitats",
+  "opportunityFilterByType": "Filtrar per tipus",
+  "opportunityFilterByCountry": "Filtrar per país",
+  "opportunitySubmitNew": "Enviar nova oportunitat",
+  "opportunitySeeDetails": "Veure detalls",
+  "opportunityFilterTitle": "Filtres",
+  "opportunityResetFilters": "Restablir filtres",
+  "opportunityApplyFilters": "Aplicar filtres",
+  "type": "Tipus",
+  "deadline": "Data límit",
+  "location": "Ubicació",
+  "salary": "Salari (opcional)",
+  "requirements": "Requisits",
+  "applicationUrl": "URL d'aplicació",
+  "contactEmail": "Correu electrònic de contacte",
+  "visible": "Visible",
+  "continue": "Continuar",
+  "confirmUpload": "Confirmar pujada",
+  "uploadingOpportunities": "Pujant oportunitats...",
+  "validationIssues": "Problemes de validació",
+  "update": "Actualitzar",
+  "enterTitle": "Si us plau, introdueix un títol",
+  "selectType": "Si us plau, selecciona un tipus",
+  "selectDeadline": "Si us plau, selecciona una data límit",
+  "enterInstitution": "Si us plau, introdueix una institució",
+  "enterLocation": "Si us plau, introdueix una ubicació",
+  "enterDescription": "Si us plau, introdueix una descripció",
+  "enterRequirements": "Si us plau, introdueix requisits",
+  "enterApplicationUrl": "Si us plau, introdueix una URL d'aplicació",
+  "enterContactEmail": "Si us plau, introdueix un correu electrònic de contacte",
+  "enterValidEmail": "Si us plau, introdueix una adreça de correu electrònic vàlida",
+  "confirmUploadMessage": "Això pujarà {count} oportunitats. Vols continuar?",
+  "locationSelected": "Ubicació seleccionada: ({lat}, {lng})",
+  "allCountries": "Tots els Països",
+  "opportunityFilterOptions": "Opcions de Filtre",
+  "selectLocation": "Selecciona ubicació",
+  "opportunityIntroText": "Envia una nova oportunitat en paleontologia",
+  "opportunityLoginRequired": "Inicia sessió per enviar una nova oportunitat",
+  "selectLocationOnMap": "Selecciona la ubicació al mapa",
+  "selectColor": "Selecciona color",
+  "changeChartColor": "Canvia el color del gràfic",
+  "filterTerms": "Termes de filtre",
+  "searchTerms": "Termes de cerca",
+  "showAll": "Mostrar tot",
+  "hideAll": "Amagar tot",
+  "filterUsers": "Filtrar usuaris",
+  "enableUserFilter": "Habilitar filtre d'usuari",
+  "searchUsers": "Cercar usuaris",
+  "selectAll": "Seleccionar tot",
+  "selectNone": "No seleccionar cap",
+  "resetAllFilters": "Restablir tots els filtres",
+  "hideFilters": "Amagar filtres",
+  "showFilters": "Mostrar filtres",
+  "activeFilters": "Filtres actius",
+  "chronoChart": "Taula Cronoestratigràfica",
+  "ma": "Ma",
+  "stratigraphicUnit": "Unitat Estratigràfica",
+  "geochronologicUnit": "Unitat Geocronològica",
+  "ratifiedGSSPCategories": "Global Boundary Stratotype Section and Point (GSSP) categories",
+  "ratifiedGSSACategories": "Global Standard Stratigraphic Age (GSSA) categories",
+  "subUnits": "subunitats",
+  "searchTimeUnits": "Cercar unitats de temps...",
+  "noResultsFound": "No s'han trobat resultats per a",
+  "tapToNavigate": "Fes clic a una unitat de temps per navegar pel gràfic",
+  "returnToTopLevel": "Tornar al Nivell Superior",
+  "noDataAvailable": "No hi ha dades disponibles",
+  "errorLoadingChronoData": "Error en carregar les dades",
+  "cannotNavigateTo": "No es pot navegar a",
+  "eon": "Eó",
+  "era": "Era",
+  "period": "Període",
+  "epoch": "Època",
+  "age": "Edat",
+  "showAges": "Mostrar Edats",
+  "showEpochs": "Mostrar Èpoques",
+  "showPeriods": "Mostrar Períodes",
+  "showEras": "Mostrar Eres",
+  "showEons": "Mostrar Eons",
+  "resetView": "Restablir Vista"
 }
