--- a/assets/assets/lang/en.json
+++ b/assets/assets/lang/en.json
@@ -13,8 +13,8 @@
   "myRecords": "My Records",
   "settings": "Settings",
   "logout": "Logout",
-  "login": "Login",
-  "register": "Register",
+
+
   "language": "Language",
   "theme": "Theme",
   "systemTheme": "System Theme",
@@ -22,7 +22,7 @@
   "darkTheme": "Dark Theme",
   "submit": "Submit",
   "cancel": "Cancel",
-  "search": "Search",
+
   "selectColumns": "Select Columns",
   "ok": "OK",
   "noData": "No Data", 
@@ -41,6 +41,12 @@
   "moderation": "Moderation",
   "users": "Users",
   "events": "Events",
+  "isMultyDayEvent": "Multi-day Event",
+  "eventEndDateTime": "Event End Date & Time",
+  "selectEventDateTime": "Select Event Date & Time",
+  "selectEndDateTime": "Select End Date & Time",
+  "endDateRequired": "End date is required for multi-day events",
+  "eventEndDateMustBeAfterStartDate": "End date must be after start date",
   "paleontologists": "Paleontologists",
   "museums": "Museums",
   "researcherProfileTitle": "Researcher Profile",
@@ -56,10 +62,8 @@
   "acceptToAppearText": "I agree to appear in the app as an expert so other users can find me",
   "submitButton": "Submit and login with Google",
   "dataSubmittedMessage": "Data submitted successfully",
-  "errorDialogTitle": "Error",
-  "errorDialogCloseButton": "Close",
+  "dataSubmittedDescription": "Your data has been submitted successfully",
   "noteLoginResearcher": "Note: Next time you can login as normal user",
-  "countryLabel": "Country",
   "errorProfileLinkLabel": "Please enter a valid URL",
   "name": "Name",
   "degree": "Degree",
@@ -104,11 +108,11 @@
   "images": "Images",
   "3dmodels": "3D Models",
   "errorLoadingModel": "Error loading model",
-  "id" : "ID",
+  "id": "ID",
   "source": "Source",
   "progress": "Progress",
   "title": "Title",
-  "thumbnail": "Thumbnail",
+
   "description": "Description",
   "creator": "Creator",
   "inCollection": "In Collection",
@@ -207,20 +211,14 @@
   "enterName": "Enter name",
   "eventDateTime": "Event Date and Time",
   "selectDateTime": "Select date and time",
-  "isMultyDayEvent": "Multi-day event",
-  "eventEndDateTime": "Event End Date & Time",
-  "selectEventDateTime": "Select Event Date & Time",
-  "selectEndDateTime": "Select End Date & Time",
-  "endDateRequired": "End date is required for multi-day events",
-  "eventEndDateMustBeAfterStartDate": "End date must be after start date",
   "timeZone": "Time Zone",
   "selectTimeZone": "Select time zone",
   "enterPlace": "Enter place",
   "enterCity": "Enter city",
   "enterState": "Enter state",
   "enterCountry": "Enter country",
-  "pickLocation": "Pick Location",
-  "selectedLocation": "Selected Location",
+
+
   "enterPrice": "Enter price or select Free",
   "enterOrganizer": "Enter organizer",
   "targetAudience": "Target Audience",
@@ -254,8 +252,10 @@
   "saveChanges": "Save Changes",
   "editRecord": "Edit Record",
   "deleteRecord": "Delete Record",
-  "areYouSureDeleteRecord" : "Are you sure you want to delete this record?",
+  "areYouSureDeleteRecord": "Are you sure you want to delete this record?",
   "delete": "Delete",
+  "error": "Error",
+  "noRecordsFound": "No records found",
   "descriptionOfTheApp": "Where is my fossil? is an application developed by the Mexican project Museo Virtual Nacional, which allows you to explore fossil occurrence data from around the world, explore phylogenies, view images and 3D models of fossils, and much more. Although the databases on occurrences, images, phylogenies, and 3D models are free, the databases of researchers and museums are independently managed by us. The hosting and maintenance of these databases are limited to the available resources, so we decided to include ads in the application to cover the maintenance and development costs of the project. Future versions of the application may reduce or eliminate ads if resources allow or if funding is obtained from other sources.",
   "followUs": "Follow us on social networks or make a donation to support the project",
   "acceptTermsText": "By clicking on the 'Submit and login with Google' button, you agree to the terms and conditions of the application",
@@ -264,10 +264,11 @@
   "museumDetails": "Museum Details",
   "database": "Database",
   "deleteLocalDatabases": "Delete Local Database",
-  "localDatabaseCleared": "Local database cleared",
+  "localDatabasesCleared": "Local database cleared",
   "translations": "Translations",
   "translators": "Translators",
   "supportUs": "Support Us",
+  "resetTree": "Reset Tree",
   "pinchToZoom": "Pinch to zoom",
   "dragToMove": "Drag to move",
   "radialView": "Radial View",
@@ -309,5 +310,86 @@
   "taxon": "Taxon",
   "pbdbOccurrenceId": "PBDB Occurrence ID",
   "viewFullDetails": "View Full Details",
-  "viewOnApp": "View on Where is my fossil"
+  "member": "Member",
+  "reference": "Reference",
+  "viewMediaAndReferences": "View Media and References",
+  "location": "Location",
+  "viewOnApp": "View on Where is my fossil",
+  "opportunities": "Paleontology Opportunities",
+  "opportunityDeadline": "Deadline",
+  "opportunitySalary": "Salary",
+  "opportunityApply": "Apply",
+  "opportunityContact": "Contact",
+  "opportunityNoResults": "No opportunities found",
+  "opportunityFilterByType": "Filter by type",
+  "opportunityFilterByCountry": "Filter by country",
+  "opportunitySubmitNew": "Submit new opportunity",
+  "opportunitySeeDetails": "See details",
+  "opportunityFilterTitle": "Filters",
+  "opportunityResetFilters": "Reset filters",
+  "opportunityApplyFilters": "Apply filters",
+  "type": "Type",
+  "deadline": "Deadline",
+  "salary": "Salary (optional)",
+  "requirements": "Requirements",
+  "applicationUrl": "Application URL",
+  "contactEmail": "Contact Email",
+  "visible": "Visible",
+  "continue": "Continue",
+  "confirmUpload": "Confirm Upload",
+  "uploadingOpportunities": "Uploading opportunities...",
+  "validationIssues": "Validation Issues",
+  "update": "Update",
+  "enterTitle": "Please enter a title",
+  "selectType": "Please select a type",
+  "selectDeadline": "Please select a deadline",
+  "enterInstitution": "Please enter an institution",
+
+  "enterDescription": "Please enter a description",
+  "enterRequirements": "Please enter requirements",
+  "enterApplicationUrl": "Please enter an application URL",
+  "enterContactEmail": "Please enter a contact email",
+  "enterValidEmail": "Please enter a valid email address",
+  "confirmUploadMessage": "This will upload {count} opportunities. Do you want to continue?",
+  "locationSelected": "Location selected: ({lat}, {lng})",
+  "allCountries": "All Countries",
+  "opportunityFilterOptions": "Filter Options",
+  "selectLocation": "Select Location",
+  "opportunityIntroText": "Submit a new paleontology opportunity",
+  "opportunityLoginRequired": "You need to login to submit an opportunity",
+  "selectLocationOnMap": "Select location on map",
+  "selectColor": "Select Color",
+  "changeChartColor": "Change Chart Color",
+  "filterTerms": "Filter Terms",
+  "searchTerms": "Search Terms",
+  "showAll": "Show All",
+  "hideAll": "Hide All",
+  "filterUsers": "Filter Users",
+  "enableUserFilter": "Enable User Filter",
+  "searchUsers": "Search Users",
+  "selectAll": "Select All",
+  "selectNone": "Select None",
+  "resetAllFilters": "Reset All Filters",
+  "hideFilters": "Hide Filters",
+  "showFilters": "Show Filters",
+  "activeFilters": "Active Filters",
+  "chronoChart": "Chronostratigraphic Chart",
+  "ma": "Ma",
+  "stratigraphicUnit": "Stratigraphic Unit",
+  "geochronologicUnit": "Geochronologic Unit",
+  "ratifiedGSSPCategories": "Global Boundary Stratotype Section and Point",
+  "ratifiedGSSACategories": "Global Standard Stratigraphic Age",
+  "subUnits": "sub-units",
+  "searchTimeUnits": "Search for time units...",
+  "noResultsFound": "No results found for",
+
+  "noDataAvailable": "No data available",
+
+  "eon": "Eon",
+  "era": "Era",
+  "period": "Period",
+  "epoch": "Epoch",
+  "age": "Age"
 }
+
+
